2003-01-22  Christian Rose  <menthos@menthos.com>

	* configure.in: Added "mn" to ALL_LINGUAS.

2003-01-21  Ross Burton  <ross@burtonini.com>

	* configure.in: Version 2.2.0!
	* NEWS: Document what happened.

2003-01-09  Alex Duggan  <aldug@gnome.org>
	
	* glines/glines.c,
	* gnometris/tetris.cpp, gnometris/tetris.h,
	* gnotravex/gnotravex.c:
	Make the about dialogs in glines, gnometris and gnotravex use
	the same VERSION as the rest of gnome-games
		
2003-01-08  Alex Duggan  <aldug@gnome.org>

	* aisleriot/menu.c, gataxx/gataxx.c,
	glines/glines.c, gnibbles/main.c,
	gnobots2/menu.c, gnome-stones/main.c,
	gnometris/tetris.cpp, gnomine/gnomine.c,
	gnotravex/gnotravex.c, gnotski/gnotski.c,
	gtali/gyahtzee.c, iagno/gnothello.c,
	mahjongg/mahjongg.c, same-gnome/same-gnome.c:
	Use aisleriot's logo in it's about box, fix small memory
	leaks in about boxes when not unref()'ing the pixbuf. 

2003-01-03  Ross Burton  <ross@burtonini.com>

	* configure.in: New version.
	* NEWS: List the changes.

2002-12-16  Ross Burton  <ross@burtonini.com>

	* configure.in: New version
	* NEWS: Detail the changes.
	* configure.in: Use GNOME_CXX_CHECK instead of GAMES_. Also start
	to reduce the number of entries in acconfig.h
	* games-macros/games-cxx-check.m4, games-macros/README: Remove the
	m4 code to check for a C++ compiler as we use gnome-common now.

2002-12-11  Ross Burton  <ross@burtonini.com>

	* aisleriot/sol.desktop.in, freecell/src/freecell.desktop.in,
	gataxx/gataxx.desktop.in, glines/glines.desktop.in,
	gnect/data/gnect.desktop.in, gnibbles/gnibbles.desktop.in,
	gnobots2/gnobots2.desktop.in,
	gnome-stones/gnome-stones.desktop.in,
	gnometris/gnometris.desktop.in, gnomine/gnomine.desktop.in,
	gnotravex/gnotravex.desktop.in, gnotski/gnotski.desktop.in,
	gtali/gtali.desktop.in, iagno/iagno.desktop.in
	mahjongg/mahjongg.desktop.in, same-gnome/same-gnome.desktop.in,
	xbill/xbill.desktop.in: Added StartupNotify=true tags so that the
	busy cursor appears. Eye candy!
