@@ -1,3 +1,8 @@
+2003-02-18  Ross Burton  <ross@burtonini.com>
+
+	* games-macros/gnome-cxx-check.m4: Add a local copy of the C++
+	checking macro as its about to go from gnome-common.
+
 2003-01-22  Christian Rose  <menthos@menthos.com>
 
 	* configure.in: Added "mn" to ALL_LINGUAS.
